no bug - Fix alignment of Save Changes button at the bottom of modal UI

--- a/extensions/BugModal/web/bug_modal.css
+++ b/extensions/BugModal/web/bug_modal.css
@@ -330,6 +330,7 @@ input[type="number"] {
 #resolve-as,
 #bottom-status {
   display: inline;
+  vertical-align: top;
 }
 
 #after-comment-commit-button {
